--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../assets/favicon.ico" />
   </head>
   <body>
       <main></main>
