--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title>Oskar Lindgren</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Oskar Lindgren is a Frontend Dev with experince with React, React Native, Vue. As a Fullstack Dev he also uses Node.js, Go, Java and C#.">
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Oskar Lindgren - Frontend Developer">
+    <meta property="og:url" content="https://www.oskarlindgren.se/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="React, React Native, Vue. Backend: Node.js, Go, Java, C#. DevOps: Docker, Jenkins, ELK" />
+    <meta property="og:image" content="https://dl.dropboxusercontent.com/s/o5zdwzfllgiwugo/AAEAAQAAAAAAAA1eAAAAJGZmYTkyMmY1LTM1NGYtNDliNS05MWQyLTA2YjIzNmY0ZDcwOA.jpg?dl=0" />
+    <meta property="og:image:alt" content="Profile Picture of Oskar Lindgren" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body>
       <main></main>
