chore: update index.html BASEURL

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="%BASEURL%/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="%BASEURL%/favicon.ico" />
   </head>
   <body>
       <main></main>
@@ -24,7 +24,7 @@
       <div class="content-wrapper">
           <div class="content-inner">
             <section class="container with-title">
-              <h2 class="title">Oskar Lindgren 5</h2>
+              <h2 class="title">Oskar Lindgren</h2>
                 <div class="row">
                   <img src="https://avatars0.githubusercontent.com/u/2677573?s=460&v=4" alt="profile picture" width="100" height="100" />
                   <div style="margin-left:28px;">
@@ -40,7 +40,7 @@
           </div>
         </div>
 
-    <script src="%BASEURL%script.js"></script>
+    <script src="%BASEURL%/script.js"></script>
     <!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
     <script>
       const userAgent = navigator.userAgent.toLowerCase()
