--- a/src/index.html
+++ b/src/index.html
@@ -19,57 +19,28 @@
     <link rel="shortcut icon" href="%BASEURL%/favicon.ico" />
   </head>
   <body>
-      <main></main>
+    <main></main>
 
-      <div class="content-wrapper">
-          <div class="content-inner">
-            <section class="container with-title">
-              <h2 class="title">Oskar Lindgren</h2>
-                <div class="row">
-                  <img src="https://avatars0.githubusercontent.com/u/2677573?s=460&v=4" alt="profile picture" width="100" height="100" />
-                  <div style="margin-left:28px;">
-                    <ul>
-                      <li><a href="https://github.com/MrOggy85">Github</a></li>
-                      <li><a href="https://www.linkedin.com/in/oskarlindgren/">LinkedIn</a></li>
-                      <li><a href="https://twitter.com/oskarlindgren">Twitter</a></li>
-                      <li><a href="https://www.oskarlindgren.se/blog">Blog</a></li>
-                    </ul>
-                  </div>
-               </div>
-            </section>
-          </div>
-        </div>
-
+    <div class="content-wrapper">
+      <div class="content-inner">
+        <section class="container with-title">
+          <h2 class="title">Oskar Lindgren</h2>
+            <div class="row">
+              <img src="https://avatars0.githubusercontent.com/u/2677573?s=460&v=4" alt="profile picture" width="100" height="100" />
+              <div style="margin-left:28px;">
+                <ul>
+                  <li><a href="https://github.com/MrOggy85">Github</a></li>
+                  <li><a href="https://www.linkedin.com/in/oskarlindgren/">LinkedIn</a></li>
+                  <li><a href="https://twitter.com/oskarlindgren">Twitter</a></li>
+                  <li><a href="https://www.oskarlindgren.se/blog">Blog</a></li>
+                </ul>
+              </div>
+            </div>
+        </section>
+      </div>
+    </div>
     <script src="%BASEURL%/script.js"></script>
     <!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
-    <script>
-      const userAgent = navigator.userAgent.toLowerCase()
-      const isGoogleBot = userAgent.includes('googlebot')
-      const isBingBot = userAgent.includes('bingbot')
-      const isYahooBot = userAgent.includes('slurp')
-      const isDuckDuckBot = userAgent.includes('duckduckbot')
-      const isChineseBot = userAgent.includes('spider')
-      const isYandexBot = userAgent.includes('yandexbot')
-      const isAlexaBot = userAgent.includes('ia_archiver')
-      const isFacebookBot = userAgent.includes('facebot') || userAgent.includes('facebookexternalhit')
-
-      const isBot = isGoogleBot || isBingBot || isYahooBot || isDuckDuckBot || isChineseBot || isYandexBot || isAlexaBot || isFacebookBot
-
-      if(!isBot) {
-        (function(f, a, t, h, o, m){
-          a[h]=a[h]||function(){
-            (a[h].q=a[h].q||[]).push(arguments)
-          };
-          o=f.createElement('script'),
-          m=f.getElementsByTagName('script')[0];
-          o.async=1; o.src=t; o.id='fathom-script';
-          m.parentNode.insertBefore(o,m)
-        })(document, window, '//monitor.oskarlindgren.se/tracker.js', 'fathom');
-        fathom('set', 'siteId', 'NYKME');
-        fathom('trackPageview');
-      }
-
-      </script>
-      <!-- / Fathom -->
+    <script src="%BASEURL%/fathom.js"></script>
   </body>
 </html>
